# synth_machine

./: .envrc.sample  .gitignore  .pre-commit-config.yaml  README.md  Untitled.ipynb  cliff.toml  pyproject.toml  synth_definition.md  synth_machine_quickstart.ipynb
.github/: dependabot.yaml
.github/workflow/: main.yaml
.github/workflows/: deploy.yaml  deploy_test.yaml  main.yaml  precommit.yaml  release.yaml  tests.yaml
example_synths/: adventure.yml  ai_songwriter.yml  blog_post_generator.yml  documentation_writer.yml  linkedin_post_generator.yml  tool_synth.yml
src/: executor_factory.py  safety.py  synth_config.py  synth_cost.py  synth_machine.py  synth_machine_configs.py  synth_runners.py
src/executors/: anthropic.py  base.py  openai.py  togetherai.py  vertex.py
src/synth_machine/: __init__.py  config.py  cost.py  safety.py
src/synth_machine/executors/: anthropic.py  base.py  openai.py  togetherai.py
synth_machine/: __init__.py  config.py  cost.py  executor_factory.py  machine.py  machine_config.py  operation_definitions.py  operator_setup.py  provider_factory.py  rag.py  runners.py  safety.py  synth_definition.py  synth_parser.py  tools.py  user_defined_functions.py
synth_machine/executors/: __init__.py  anthropic.py  base.py  lorem.py  mock.py  openai.py  togetherai.py
synth_machine/experimental/synth_test/: __init__.py  run.py  synth_test_config.py  synth_test_prompts.py  synth_test_runner.py
synth_machine/providers/: anthropic.py  base.py  lorem.py  openai.py  togetherai.py
tests/: test_helper.py  test_mocks.py  test_operator_setup.py  test_synth_machine.py  test_synth_machine_failure.py  test_synth_machine_success.py  test_synth_parser.py  test_synth_test.py  test_utils.py
tests/fixtures/: acts_condensed.json  amend_transistions.json  append_transistions.json  basic_transitions.json  interleave_transistions.json  jq_transistions.json  json_validate_transistions.json  loop_transistions.json  simple_transistions.json  states.json  udf_transitions.json
