[tool.poetry]
name = "synth_machine"
version = "0.3.0"
description = ""
authors = [
  "CTO <cto@hiresynth.ai>",
  "CEO <ceo@hiresynth.ai>",
  "COO <coo@hiresynth.ai>"
]
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
anthropic = "^0.26.0"
jinja2 = "^3.1.2"
jq = "^1.6.0"
jsonschema = "^4.19.2"
object-store-python = "^0.1.10"
opa-python-client = "^1.3.6"
openai = "1.28.1"
partial_json_parser = "*"
pydantic = "^2.7.1"
requests = "^2.31.0"
tiktoken = "0.6.0"
transitions = "^0.9.0"
urllib3 = "*"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.26.0"
coverage = "^7.5.1"
deptry = "^0.16.1"
pre-commit = "^3.6.2"
pyright = "^1.1.326"
pyyaml = "^6.0.1"
ruff = "^0.4.3"

[tool.coverage.run]
branch = true
omit = ["./tests/*"]

[tool.pyright]
reportMissingImports = false

[tool.ruff]
exclude = [".venv", "example_synths"]

[tool.ruff.lint.isort]
case-sensitive = true
classes = ["SVC"]
combine-as-imports = true
constants = ["constant"]
detect-same-package = false
extra-standard-library = ["path"]
force-single-line = true
force-sort-within-sections = true
force-to-top = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
